--- a/HW2/CMakeLists.txt
+++ b/HW2/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.12)
 set(CMAKE_BUILD_TYPE Debug)
-project(COMPUTATION_HW2)
+project(HW2)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(COMPUTATION_HW2 main.cpp)
+add_executable(HW2 main.cpp)
