--- a/HW1/CMakeLists.txt
+++ b/HW1/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.12)
 set(CMAKE_BUILD_TYPE Debug)
-project(COMPUTATION_HW1)
+project(HW1)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(COMPUTATION_HW1 main.cpp)
+add_executable(HW1 main.cpp)
